tests/pos/objects/00-object.ts

/*@ foo :: (x: posint) => { @Final a: posint }  */
function foo(x: number): Object {
    return { a: x };
}
